nanousd-properties.h


NANOUSD_API
nusd_result_t nusd_property_get_type(nusd_stage_t stage, char const* property_path, nusd_type_t* property_type);