libnanousd/nanousd-array.h

typedef struct nusd_double3_array_s* nusd_double3_array_t;
typedef struct nusd_double4_array_s* nusd_double4_array_t;
typedef struct nusd_int_array_s* nusd_int_array_t;
typedef struct nusd_int2_array_s* nusd_int2_array_t;
typedef struct nusd_int3_array_s* nusd_int3_array_t;
typedef struct nusd_int4_array_s* nusd_int4_array_t;
typedef struct nusd_int64_array_s* nusd_int64_array_t;
typedef struct nusd_matrix2d_array_s* nusd_matrix2d_array_t;
typedef struct nusd_matrix3d_array_s* nusd_matrix3d_array_t;
typedef struct nusd_matrix4d_array_s* nusd_matrix4d_array_t;
typedef struct nusd_uint_array_s* nusd_uint_array_t;
typedef struct nusd_uint64_array_s* nusd_uint64_array_t;
typedef struct nusd_uchar_array_s* nusd_uchar_array_t;
NANOUSD_API
double* nusd_double3_array_data(nusd_double3_array_t double3_array);
NANOUSD_API
void nusd_double3_array_destroy(nusd_double3_array_t double3_array);
NANOUSD_API
size_t nusd_double4_array_size(nusd_double4_array_t double4_array);
NANOUSD_API
double* nusd_double4_array_data(nusd_double4_array_t double4_array);
NANOUSD_API
void nusd_double4_array_destroy(nusd_double4_array_t double4_array);
NANOUSD_API
size_t nusd_int_array_size(nusd_int_array_t int_array);
NANOUSD_API
int* nusd_int_array_data(nusd_int_array_t int_array);
NANOUSD_API
void nusd_int_array_destroy(nusd_int_array_t int_array);
NANOUSD_API
size_t nusd_int2_array_size(nusd_int2_array_t int2_array);
NANOUSD_API
int* nusd_int2_array_data(nusd_int2_array_t int2_array);
NANOUSD_API
void nusd_int2_array_destroy(nusd_int2_array_t int2_array);
NANOUSD_API
size_t nusd_int3_array_size(nusd_int3_array_t int3_array);
NANOUSD_API
int* nusd_int3_array_data(nusd_int3_array_t int3_array);
NANOUSD_API
void nusd_int3_array_destroy(nusd_int3_array_t int3_array);
NANOUSD_API
size_t nusd_int4_array_size(nusd_int4_array_t int4_array);
NANOUSD_API
int* nusd_int4_array_data(nusd_int4_array_t int4_array);
NANOUSD_API
void nusd_int4_array_destroy(nusd_int4_array_t int4_array);
NANOUSD_API
size_t nusd_int64_array_size(nusd_int64_array_t int64_array);
NANOUSD_API
int64_t* nusd_int64_array_data(nusd_int64_array_t int64_array);
NANOUSD_API
void nusd_int64_array_destroy(nusd_int64_array_t int64_array);
NANOUSD_API
size_t nusd_matrix2d_array_size(nusd_matrix2d_array_t matrix2d_array);
NANOUSD_API
double* nusd_matrix2d_array_data(nusd_matrix2d_array_t matrix2d_array);
NANOUSD_API
void nusd_matrix2d_array_destroy(nusd_matrix2d_array_t matrix2d_array);
NANOUSD_API
size_t nusd_matrix3d_array_size(nusd_matrix3d_array_t matrix3d_array);
NANOUSD_API
double* nusd_matrix3d_array_data(nusd_matrix3d_array_t matrix3d_array);
NANOUSD_API
void nusd_matrix3d_array_destroy(nusd_matrix3d_array_t matrix3d_array);
NANOUSD_API
size_t nusd_matrix4d_array_size(nusd_matrix4d_array_t matrix4d_array);
NANOUSD_API
double* nusd_matrix4d_array_data(nusd_matrix4d_array_t matrix4d_array);
NANOUSD_API
void nusd_matrix4d_array_destroy(nusd_matrix4d_array_t matrix4d_array);
NANOUSD_API
size_t nusd_uchar_array_size(nusd_uchar_array_t uchar_array);
NANOUSD_API
unsigned char* nusd_uchar_array_data(nusd_uchar_array_t uchar_array);
NANOUSD_API
void nusd_uchar_array_destroy(nusd_uchar_array_t uchar_array);
NANOUSD_API
size_t nusd_uint_array_size(nusd_uint_array_t uint_array);
NANOUSD_API
unsigned int* nusd_uint_array_data(nusd_uint_array_t uint_array);
NANOUSD_API
void nusd_uint_array_destroy(nusd_uint_array_t uint_array);
NANOUSD_API
size_t nusd_uint64_array_size(nusd_uint64_array_t uint64_array);
NANOUSD_API
uint64_t* nusd_uint64_array_data(nusd_uint64_array_t uint64_array);
NANOUSD_API
void nusd_uint64_array_destroy(nusd_uint64_array_t uint64_array);